--- a/TODO
+++ b/TODO
@@ -11,3 +11,4 @@
 11) this one will require more than one sentence to explain because im polarized at both ends for implementing either:
     - idea #1: implement a "hovercard" style tooltip or something when you hover over a users avatar
     - idea #2: implement an entire page to display a specific users tweets and info when clicking on their avatar
+12) extend the notifications support beyond google chrome / chromium (although you can do this in firefox using: http://code.google.com/p/ff-html5notifications/)
