--- a/TODO
+++ b/TODO
@@ -12,3 +12,4 @@
     - idea #1: implement a "hovercard" style tooltip or something when you hover over a users avatar
     - idea #2: implement an entire page to display a specific users tweets and info when clicking on their avatar
 12) extend the notifications support beyond google chrome / chromium (although you can do this in firefox using: http://code.google.com/p/ff-html5notifications/)
+13) fix mention cloning from the home timeline into the mentions timeline so the buttons work in either timeline
