--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
 3) possibly a govern of some sort when it spits out too many tweets (eg it slows each outputted tweet down to one per second)
 4) reset the userstream every...1000-2000 or so tweets / hour, whichever comes first
 5) ability to mute individual users, clients (or the source param from the api, eg "Tumblr"), mentions, etc
+6) create a public/js/src/ folder with everything in libs.js in their regular form
