--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 1) possibly a govern of some sort when it spits out too many tweets (eg it slows each outputted tweet down to one per second)
 2) fix the clipping issue with some tweets as they come in get displayed
+3) ability to start a new dm session (right now you can only reply to an existing one)
