--- a/README
+++ b/README
@@ -9,7 +9,15 @@ it is licensed under the new bsd / freebsd styled / simplified bsd license, and 
 "designo" (search for it on here), the streaming code from jdub/node-twitter, and a small section of a
 free template from arcsin.se.
 
-requirements:
+trunk requirements (required by multiple modules below, install these first and in order!):
+
+npm install formidable
+npm install mime
+npm install policyfile
+npm install qs
+npm install socket.io-client
+
+leaf requirements (install in order!):
 
 npm install connect
 npm install connect-gzip
@@ -22,5 +30,10 @@ npm install socket.io-sessions
 
 optional:
 
-npm install connect-redis (use redis to handle sessions, remember to set storage_type to "redis")
+	use redis to handle sessions, remember to set storage_type to "redis":
 
+		trunk requirements:
+		npm install redis
+
+		requirements:
+		npm install connect-redis
