--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 1) fix the clipping issue with some tweets as they come in get displayed
 2) ability to start a new dm session (right now you can only reply to an existing one)
+3) fix some general but minor cloning issues that seem to arise with the increasing complexity of displaying tweets
