expand translation some more

--- a/public/lang/english.json
+++ b/public/lang/english.json
@@ -8,5 +8,24 @@
 	"image": "photo",
 	"exit": "exit",
 	"tweet_placeholder": "whats happening?",
-	"dm_to_placeholder": "new message"
+	"dm_to_placeholder": "new message",
+	"wrote_this": "wrote this ",
+	"in_reply_to": " in reply to ",
+	"via": " via",
+	"just_now": "just now",
+	"ago": "ago",
+	"seconds": "seconds",
+	"second": "a second",
+	"minutes": "minutes",
+	"minute": "a minute",
+	"hours": "hours",
+	"hour": "an hour",
+	"days": "days",
+	"day": "yesterday",
+	"weeks": "weeks",
+	"week": "last week",
+	"months": "months",
+	"month": "last month",
+	"years": "years",
+	"year": "last year"
 }
