--- a/public/lang/russian.json
+++ b/public/lang/russian.json
@@ -8,5 +8,24 @@
 	"image": "фото",
 	"exit": "выйти",
 	"tweet_placeholder": "что происходит?",
-	"dm_to_placeholder": "новое сообщение"
+	"dm_to_placeholder": "новое сообщение",
+	"wrote_this": "сказа́ло этот ",
+	"in_reply_to": " в ответ ",
+	"via": " с помощью",
+	"just_now": "сейчас",
+	"ago": "назад",
+	"seconds": "секунды",
+	"second": "1 секунды",
+	"minutes": "Минута",
+	"minute": "1 Минута",
+	"hours": "час",
+	"hour": "1 час",
+	"days": "день",
+	"day": "1 день",
+	"weeks": "неделя",
+	"week": "1 неделя",
+	"months": "месяц",
+	"month": "1 месяц",
+	"years": "год",
+	"year": "1 год"
 }
