--- a/README
+++ b/README
@@ -4,8 +4,8 @@ mostly just a client im writing in my spare time, nothing really that special he
 it is meant to be ran with only a single user (eg localhost, NOT the internet) at a time at the moment.
 
 it is licensed under the new bsd / freebsd styled / simplified bsd license, and is partially based on 
-"designo" (search for it on here), the streaming code from jdub/node-twitter, and a small section of a
-free template from arcsin.se.
+kazuyukitanimura/designo, the streaming code from jdub/node-twitter, and a small section of a free template
+from arcsin.se.
 
 trunk requirements (required by multiple modules below, install these first and in order!):
 
@@ -31,7 +31,16 @@ optional:
 	use redis to handle sessions, remember to set storage_type to "redis":
 
 		trunk requirements:
-		npm install redis
+			npm install redis
 
 		leaf requirements:
-		npm install connect-redis
+			npm install connect-redis
+
+serverside notes:
+
+the serverside part of the z engine is very stable at this point
+
+clientside notes:
+
+the clientside part of the z engine is mostly stable across the four major browsers, with no testing
+done on IE x.x at this point.
