--- a/public/lang/english.json
+++ b/public/lang/english.json
@@ -8,7 +8,7 @@
 	"image": "photo",
 	"exit": "exit",
 	"tweet_placeholder": "whats happening?",
-	"dm_to_placeholder": "new message",
+	"dm_to_placeholder": "screenname",
 	"wrote_this": "wrote this ",
 	"in_reply_to": " in reply to ",
 	"via": " via",
