--- a/public/lang/russian.json
+++ b/public/lang/russian.json
@@ -8,7 +8,7 @@
 	"image": "фото",
 	"exit": "выйти",
 	"tweet_placeholder": "что происходит?",
-	"dm_to_placeholder": "новое сообщение",
+	"dm_to_placeholder": "псевдоним",
 	"wrote_this": "сказа́ло этот ",
 	"in_reply_to": " в ответ ",
 	"via": " с помощью",
