--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 1) fix some general but minor cloning issues that seem to arise with the increasing complexity of displaying tweets
 2) update the menu with retweeted info (so you can undo it)
+3) fix the time updater in opera, seems broken
