--- a/public/lang/russian.json
+++ b/public/lang/russian.json
@@ -6,6 +6,7 @@
 	"stop": "пауза",
 	"start": "старт",
 	"image": "фото",
+	"settings": "настройки",
 	"exit": "выйти",
 	"tweet_placeholder": "что происходит?",
 	"dm_to_placeholder": "псевдоним",
