bugfixes and improvements

--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
 1) fix some general but minor cloning issues that seem to arise with the increasing complexity of displaying tweets
-2) fix the time updater in opera, seems broken
+2) opera bugs:
+   a) fix relative time updater
+   b) fix the context menu (some items such as "favorite" are only shown in here)!!
