been avoiding this but its probably time to at least put this in the todo

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 2) opera bugs:
    a) fix relative time updater
    b) fix the context menu (some items such as "favorite" are only shown in here)!!
+3) site streams
