--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 1) fix some general but minor cloning issues that seem to arise with the increasing complexity of displaying tweets
 2) opera bugs:
    a) fix relative time updater
-   b) fix the context menu (some items such as "favorite" are only shown in here)!!
+   b) fix the context menu
 3) site streams
