remove that extra home fetch, bugfixes for opera and relative time, use prototypes select method for automatically selecting the language on the settings screen

--- a/public/lang/russian.json
+++ b/public/lang/russian.json
@@ -17,7 +17,7 @@
 	"ago": "назад",
 	"seconds": "секунды",
 	"second": "1 секунды",
-	"minutes": "Минута",
+	"minutes": "минута",
 	"minute": "1 Минута",
 	"hours": "час",
 	"hour": "1 час",
