bugfixes, expand translations, remove the current "loading" centering methods (im going to find a better method to do this)

--- a/public/lang/english.json
+++ b/public/lang/english.json
@@ -30,6 +30,9 @@
 	"years": "years",
 	"year": "last year",
 	"language_settings": "language settings",
+	"retweet_settings": "old retweet settings",
+	"comment": "comment",
+	"quote": "quote",
 	"notify_settings": "notify settings",
 	"notify_length_settings": "notify length",
 	"wait_length_settings": "wait length",
