--- a/public/lang/russian.json
+++ b/public/lang/russian.json
@@ -30,6 +30,9 @@
 	"years": "год",
 	"year": "1 год",
 	"language_settings": "язык настройки",
+	"retweet_settings": "старый ретвитнуть настройки",
+	"comment": "комментарий",
+	"quote": "цитата",
 	"notify_settings": "уведомлять настройки",
 	"notify_length_settings": "уведомлять длина",
 	"wait_length_settings": "ждать длина",
